# home_3

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/api/: router.py
src/app/core/: settings.py
src/app/db/: conf.py
src/app/db/models/: models.py
src/app/excentions/: common.py  handlers.py  http.py
